fixing url space bug, adding validation when user adding whitespace character in their username

--- a/src/pages/assets/css/register.css
+++ b/src/pages/assets/css/register.css
@@ -288,10 +288,7 @@
     }
     
     .form {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        margin-left: 1vh;
         margin-top: -10px;
     }
     
@@ -371,8 +368,9 @@
         transform: rotate(45deg);
     }
     
-    button {    
+    .form form button {    
         margin-top: 30px;
+        margin-left: -10vh;
         padding: 15px 11.2rem;
         font-size: 16px;
         background-color: #EFC81A;
